--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="container my-5">
-			<div class="row">
+			<div class="row mb-5">
 				<div class="col-md-3 text-center text-sm-start mb-5" id="profile">
 					<div class="alert alert-danger">No profile data found!</div>
 				</div>
@@ -17,9 +17,7 @@
 					<div class="alert alert-danger">No repos found!</div>
 				</div>
 			</div>
-			<div class="mt-5">
-				<small>Developed by <a href="https://robertd.co.uk">Robert Dixon</a>.</small>
-			</div>
+			<p>Developed by <a href="https://robertd.co.uk">Robert Dixon</a></p>
 		</div>
 		<script src="js/script.js"></script>
 	</body>
